Closed Bug 349909 Opened 18 years ago Closed 18 years ago

<br> inside a <pre> breaks getTextAtOffset for getting lines

Categories

(Core :: Disability Access APIs, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: parente, Assigned: aaronlev)

References

Details

(Keywords: access)

Attachments

(1 file)

Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20060823 Minefield/3.0a1

Test case: http://www.mozilla.org/access/unix/new-atk.html

A call to Text::getTextAtOffset with an index produces three values: the starting index of the current soft line containing the given index, the ending index of the line, and the text of the line. Usually, the ending index of one line is given, getTextAtOffset returns the next soft line. This is the case with nearly all text on the test page. However, a call to getTextAtOffset with the ending index of the line that reads:

text="This is a paragraph with an * image in it"}

returns the same line text, start, and end offset. (It's in the first non-header row, third column of the large test case table at the bottom of the page).

I'm not sure what's special about this line. The bug is that it should behave consistently with all the other lines on the page. A call with the ending index of that line should return the next line.
Blocks: newatk
Keywords: access
Status: NEW → ASSIGNED
Summary: Return value of getTextAtOffset is non-deterministic → <br> inside a <pre> breaks getTextAtOffset for getting lines
Testcase: http://www.mozilla.org/access/qa/jstest.html
Note, I see problems with word start/end, but that should be filed as a separate bug.
Attachment #237774 - Flags: review?(ginn.chen)
Attachment #237774 - Flags: review?(ginn.chen) → review+
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: