Bug 349909. GetText[At|Before|After]Offset broken in some cases for lines. r=ginn.chen